[gd_scene load_steps=14 format=2]

[ext_resource path="res://player/cat-Sheet.png" type="Texture" id=1]
[ext_resource path="res://scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://sounds/jump.wav" type="AudioStream" id=3]
[ext_resource path="res://RespawnPoint.tscn" type="PackedScene" id=4]
[ext_resource path="res://transitionScreen.tscn" type="PackedScene" id=5]
[ext_resource path="res://hurtbox-hitbox/HitBox.tscn" type="PackedScene" id=6]

[sub_resource type="Animation" id=1]
resource_name = "Idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
}

[sub_resource type="Animation" id=2]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 12, 13, 14, 15, 16, 17 ]
}

[sub_resource type="Animation" id=3]
resource_name = "crouch"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 17, 18, 19, 20 ]
}

[sub_resource type="Animation" id=4]
resource_name = "holdCrouch"
length = 0.1
loop = true

[sub_resource type="Animation" id=5]
resource_name = "look_up"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 21, 22, 23 ]
}

[sub_resource type="CircleShape2D" id=7]
radius = 6.0

[sub_resource type="CapsuleShape2D" id=6]
radius = 4.0
height = 5.5

[node name="Player" type="KinematicBody2D" groups=[
"Player",
]]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
z_index = 1
texture = ExtResource( 1 )
hframes = 24
frame = 9

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Idle = SubResource( 1 )
anims/Run = SubResource( 2 )
anims/crouch = SubResource( 3 )
anims/holdCrouch = SubResource( 4 )
anims/look_up = SubResource( 5 )

[node name="deathTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="HitBox" parent="." instance=ExtResource( 6 )]
position = Vector2( 10, 0 )
collision_mask = 2

[node name="CollisionShape2D" parent="HitBox" index="0"]
shape = SubResource( 7 )
disabled = true

[node name="Body collider" type="CollisionShape2D" parent="."]
position = Vector2( 0.052557, 1.21022 )
shape = SubResource( 6 )

[node name="HurtBox" type="Area2D" parent="." groups=[
"Player",
]]
collision_mask = 2

[node name="HurtBox" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( -0.0341377, 1.33782 )
shape = SubResource( 6 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0

[node name="transitionScreen" parent="." instance=ExtResource( 5 )]

[node name="RespawnPoint" parent="." instance=ExtResource( 4 )]

[node name="Camera2D" type="Camera2D" parent="."]
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
editor_draw_limits = true
editor_draw_drag_margin = true

[connection signal="timeout" from="deathTimer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_Area2D_area_entered"]
[connection signal="transition" from="transitionScreen" to="." method="_on_transitionScreen_transition"]

[editable path="HitBox"]
